Fix ugly boxes at sides on ie11

--- a/public/assets/css/ie.styl
+++ b/public/assets/css/ie.styl
@@ -3,7 +3,7 @@
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
 
   * {
-    font-feature-settings normal !important
+   font-feature-settings normal !important
   }
   
   nav .logo {
@@ -14,4 +14,9 @@
     display inline-block !important
     margin: 0 !important
   }
+  
+  main {
+    background-color transparent !important
+  }
+  
 }
